5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_1016.log
== TEST (2019-04-02 09:40:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudea+latitudeb+latitudec)/2
from mah import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    from mah import*
ModuleNotFoundError: No module named 'mah'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:40:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudea+latitudeb+latitudec)/2
from mah import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.208234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 8, in <module>
    from mah import*
ImportError: No module named 'mah'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:41:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from mah import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.209035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 7, in <module>
    semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
NameError: name 'latitudedea' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:41:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
from mah import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
NameError: name 'latitudedea' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:41:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
from mah import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.146805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 7, in <module>
    semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
NameError: name 'latitudedea' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:41:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro= (latitudedea+latitudedeb+latitudedec) / 2
NameError: name 'latitudedea' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:41:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudea= float(input("comprimento de a: "))
latitudeb= float(input("comprimento de b: "))
latitudec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
NameError: name 'latitudedea' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:42:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:42:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:42:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:42:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areadotriangulo= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:43:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqr(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:43:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimeto-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'semiperimetrode' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:44:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'semiperimetrode' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:45:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areatriangulo= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areatriangulo= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'semiperimetrode' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:46:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areatriangulo= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    areatriangulo= sqrt(semiperimetro*(semiperimetrode-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
NameError: name 'semiperimetrode' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:46:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
areatriangulo= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(area, 5))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:47:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:47:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.121811
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:48:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.160209
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:48:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:48:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.162607
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:55:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.17116
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:56:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:56:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.151229
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:56:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
latitudedea= float(input("comprimento de a: "))
latitudedeb= float(input("comprimento de b: "))
latitudedec= float(input("comprimento de c: "))
semiperimetro= (latitudedea+latitudedeb+latitudedec)/2
from math import*
area= sqrt(semiperimetro*(semiperimetro-latitudedea)*(semiperimetro-latitudedeb)*(semiperimetro-latitudedec))
print(round(area, 5))
-- EXECUTION TIME:
0.20523
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
